# ripr

./: .gitignore  Cargo.toml  README.md
ripr-derive/: Cargo.toml
ripr-derive/src/: lib.rs
src/: cache.rs  client.rs  downloader.rs  element.rs  error.rs  filename.rs  html.rs  lib.rs  pipeline.rs  progress.rs  selection_chain.rs
src/pipelines/: download.rs  mod.rs  scrape.rs
tests/: derive.rs  pipeline.rs
